feat: css helpers

--- a/index.less
+++ b/index.less
@@ -1,6 +1,4 @@
-@import './src/helper';
+@import './src/variables.less';
+@import './src/main.less';
+@import './src/text.less';
 @import './src/logo.less';
-
-body {
-  font-family: 'Roboto', sans-serif;
-}
