feat: base html

--- a/src/variables.less
+++ b/src/variables.less
@@ -1,13 +1,13 @@
 :root {
   // fonts
   --text-font: 'Roboto', sans-serif;
-  --font-h1: 900 44px/48px var(--text-font);
-  --font-h2: 900 44px / var(--text-font);
-  --font-h4: 700 24px/28px var(--text-font);
-  --font-text: 400 15px/24px var(--text-font);
-  --font-text-m: 800 24px/32px var(--font-text);
+  --font-h1: normal 900 44px/48px var(--text-font);
+  --font-h2: normal 900 44px / var(--text-font);
+  --font-h4: normal 700 24px/28px var(--text-font);
+  --font-text: normal 400 15px/24px var(--text-font);
+  --font-text-m: normal 800 24px/32px var(--font-text);
   --font-text-s: var(--font-text);
-  --font-text-xs: 400 13px/20px var(--text-font);
+  --font-text-xs: normal 400 13px/20px var(--text-font);
   // sizes
   --radius-l: 24px;
   --radius-m: 16px;
