--- a/index.less
+++ b/index.less
@@ -1,4 +1,9 @@
 @import './src/variables.less';
-@import './src/main.less';
+@import './src/base.less';
 @import './src/text.less';
-@import './src/logo.less';
+@import './src/healper.less';
+@import './src/animation.less';
+@import './src/app.less';
+@import './src/header.less';
+@import './src/main.less';
+@import './src/footer.less';
