--- a/src/base/variables.less
+++ b/src/base/variables.less
@@ -2,7 +2,7 @@
   // fonts
   --text-font: 'Roboto', sans-serif;
   --font-h1: normal 900 44px/48px var(--text-font);
-  --font-h2: normal 900 44px / var(--text-font);
+  --font-h2: normal 900 44px/48px var(--text-font);
   --font-h4: normal 700 24px/28px var(--text-font);
   --font-text: normal 400 15px/24px var(--text-font);
   --font-text-m: normal 800 24px/32px var(--font-text);
