--- a/src/header.less
+++ b/src/header.less
@@ -3,12 +3,6 @@
   filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.12));
 }
 
-.header-container {
-  .app-container();
-  padding-left: 128px;
-  padding-right: 128px;
-}
-
 .header-content {
   display: flex;
   flex-direction: row;
@@ -32,6 +26,11 @@
     height: 100%;
     display: flex;
     flex-flow: row nowrap;
+
+    @media @mobile {
+      flex-flow: column nowrap;
+      visibility: hidden;
+    }
   }
 
   &__link {
@@ -85,6 +84,26 @@
     &__name {
       margin-right: 10px;
       color: var(--text-link);
+      .transition(color, 2s);
+    }
+
+    &__icon {
+      display: flex;
+
+      & svg {
+        fill: var(--text-link);
+        .transition(fill, 2s);
+      }
+    }
+
+    &:hover {
+      & .login-btn__name {
+        color: black;
+      }
+
+      & .login-btn__icon svg {
+        fill: black;
+      }
     }
   }
 }
