--- a/src/utils/text.less
+++ b/src/utils/text.less
@@ -6,16 +6,22 @@
 .text-h1() {
   font: var(--font-h1);
   color: var(--text-01);
+  margin-bottom: 16px;
+  margin-top: 0;
 }
 
 .text-h2() {
   font: var(--font-h2);
   color: var(--text-01);
+  margin-bottom: 24px;
+  margin-top: 0;
 }
 
 .text-h4() {
   font: var(--font-h4);
   color: var(--text-01);
+  margin-bottom: 16px;
+  margin-top: 0;
 }
 
 .text-hint() {
