--- a/src/utils/button.less
+++ b/src/utils/button.less
@@ -3,7 +3,6 @@
   align-items: center;
   justify-content: center;
   padding: 16px 36px;
-  background: none;
   border: none;
   color: inherit;
   font: inherit;
@@ -12,4 +11,11 @@
   background-color: var(--primary);
   border-radius: var(--radius-s);
   margin-bottom: 64px;
+  &:hover{
+    background-color: var(--primary-hover);
+  }
+  &:active{
+    background-color: var(--primary-active);
+  }
+
 }
