--- a/index.css
+++ b/index.css
@@ -3,10 +3,69 @@
 }
 body {
   background-color: var(--background-color);
+  min-height: 100%;
 }
-
+div {
+  box-sizing: border-box;
+}
 .logo {
+  margin-right: 48px;
   height: 34px;
   width: 151px;
   background-image: url('https://www.cdn-tinkoff.ru/frontend-libraries/pfcore-static-assets/logos/main-logo.svg');
+}
+.app {
+  display: flex;
+  flex-flow: column nowrap;
+  min-height: 100vh;
+}
+.header {
+  display: flex;
+  flex-flow: row;
+  flex-wrap: nowrap;
+}
+.container {
+  max-width: 1362px;
+  margin-right: auto;
+  margin-left: auto;
+  box-sizing: border-box;
+}
+
+.header-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.navigation {
+  flex: 1 0;
+  height: 64px;
+}
+
+.navList {
+  height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.navLink {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  margin-right: 24px;
+}
+
+.navLinkActive {
+  box-shadow: inset 0 -2px 0 0;
+}
+.navLinkActive a {
+  color: #000000cc;
+}
+
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
