--- a/index.less
+++ b/index.less
@@ -1,5 +1,14 @@
 @import './src/helper';
 @import './src/logo.less';
+@import './src/header.less';
+@import './src/base.less';
+@import './src/grid/flex-gird.less';
+@import './src/media.less';
+@import './src/utils/button.less';
+@import './src/utils/text.less';
+@import './src/utils/variables.less';
+@import './src/utils/pictures.less';
+@import './src/utils/block.less';
 
 body {
   font-family: 'Roboto', sans-serif;
