--- a/index.less
+++ b/index.less
@@ -9,6 +9,7 @@
 @import './src/utils/variables.less';
 @import './src/utils/pictures.less';
 @import './src/utils/block.less';
+@import './src/footer.less';
 
 body {
   font-family: 'Roboto', sans-serif;
