--- a/src/logo.less
+++ b/src/logo.less
@@ -1,6 +1,14 @@
 .logo {
-  display: block;
+  display: inline-flex;;
   height: 34px;
   width: 150px;
+  align-items: center;
   background-image: url('https://www.cdn-tinkoff.ru/frontend-libraries/pfcore-static-assets/logos/main-logo.svg');
 }
+
+.logo-box {
+  align-items: center;
+  display: flex;
+  margin-right: 48px;
+}
+
